# bike-kem-BGES-test-two-h

./: CMakeLists.txt  README.md
include/: kem.h
include/internal/: bike_defs.h  cleanup.h  decode.h  gf2x.h  gf2x_internal.h  sampling.h  sampling_internal.h  types.h
src/: kem.c
src/decode/: decode.c
src/gf2x/: gf2x_inv.c  gf2x_ksqr_avx2.c  gf2x_ksqr_avx512.c  gf2x_ksqr_portable.c  gf2x_mul.c  gf2x_mul_avx2.c  gf2x_mul_avx512.c  gf2x_mul_base_pclmul.c  gf2x_mul_base_portable.c  gf2x_mul_base_vpclmul.c  gf2x_mul_portable.c
src/random/: sampling.c  sampling_avx2.c  sampling_avx512.c  sampling_portable.c
tests/: main_test.c
